kubernetes/uptime-kuma/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
    app.kubernetes.io/instance: uptime-kuma
spec:
  revisionHistoryLimit: 0
  replicas: 1
  serviceName: uptime-kuma-service
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
      annotations:
        enable.version-checker.io/uptime-kuma: "true"
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      hostname: uptime-kuma
      restartPolicy: Always
      automountServiceAccountToken: false
      serviceAccountName: uptime-kuma-sa
      containers:
        - image: quay.io/k3rnel-pan1c/uptime-kuma:1.22.1
          imagePullPolicy: IfNotPresent
          name: uptime-kuma
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "300m"
          volumeMounts:
            - name: uptime-kuma-pvc
              mountPath: /app/data
          livenessProbe:
            exec:
              command:
                - node
                - extra/healthcheck.js
            initialDelaySeconds: 180
            periodSeconds: 60
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 3001
              scheme: HTTP
      volumes:
        - name: uptime-kuma-pvc
          persistentVolumeClaim:
            claimName: uptime-kuma-pvc
