kubernetes/uptime-kuma/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-service
  namespace: uptime-kuma
  labels:
    app.kubernetes.io/instance: uptime-kuma
spec:
  selector:
    app: uptime-kuma
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
